# CoML

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  debug.py  debug2.py  debug3.py  debug_rewrite.py  install.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: example_descriptions.json  example_history.csv  mlcopilot.db
chat/: README.md  tsconfig.json
chat/app/public/: data
chat/app/public/data/: solutions.json
chat/app/scripts/: build-react-no-split.js
chat/app/src/: App.css  App.tsx
chat/app/src/chatml/: prompt.ts
coml/: .gitignore  CHANGELOG.md  __init__.py  cli.py  core.py  deconstruct.py  experience.py  ipython_utils.py  linter.py  magics.py  main.js  orm.py  package-lock.json  package.json  prompt_utils.py  space.py  suggest.py  tsconfig.json  utils.py  vis_utils.py
coml/app/: package-lock.json  package.json
coml/app/public/data/: algorithms.json  datasets.json  knowledges.json  schemas.json  taskTypes.json
coml/app/src/: App.css  App.tsx  index.tsx
coml/app/src/app/: page.css  page.tsx
coml/app/src/chatml/: .gitignore  database.ts  embedding.ts  index.ts  prompt.ts  types.ts
coml/configagent/: .env.template  __init__.py  cli.py  constants.py  experience.py  knowledge.py  suggest.py  surrogate_utils.py  utils.py
coml/data/: algorithms.json
coml/js/: nbclassic_init.js
coml/prompts/: fix_fewshots.json  fix_fewshots_v2.json  generate_fewshots.json  generate_fewshots_kaggle.json  generate_fewshots_leetcode.json  generate_fewshots_matplotlib.json  generate_fewshots_seaborn.json  generate_fewshots_v2.json
coml/prompts/dataset/coffee_shop/: member.csv
coml/prompts/dataset/game_injury/: game.csv
coml/prompts/dataset/pilot_record/: pilot.csv
coml/prompts/dataset/scientist_1/: AssignedTo.csv  Projects.csv
coml/src/: database.ts  extension.ts  index.ts
coml/src/panels/: CoMLPanel.ts
coml/vis_utils/: __init__.py  deconstruct.py  verifier.py
examples/: .gitignore  demo0710.py  demo0726.ipynb  demo0726b.ipynb  test.ipynb  test.py
mlcopilot/: .env.template  __init__.py  __main__.py  cli.py  constants.py  experience.py  knowledge.py  orm.py  space.py  suggest.py  surrogate_utils.py  utils.py
mlcopilot/contrib/: hpob_preprocess.py  huggingface.py  kaggle.py  v2_json.py  v2_validate.py
python/: pyproject.toml
python/coml/: __init__.py  agent.py  context.py  ipython_utils.py  logging.py  node.py  node_mock.py  process_utils.py  prompt.py
python/tests/: test_agent.py  test_context.py  test_node.py  test_process_utils.py
src/: index.ts
test/: llm.py  test_experience.py  test_knowledge.py  test_orm.py  test_space.py  test_suggest.py  test_surrogate_utils.py  test_utils.py
test/configagent/: helper.py  test_experience.py  test_knowledge.py  test_surrogate_utils.py
test/configaide/: helper.py  test_experience.py  test_knowledge.py  test_space.py  test_suggest.py  test_surrogate_utils.py  test_utils.py
