[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlcopilot"
version = "0.0.1"
dependencies = [
  "click",
  "langchain",
  "numpy",
  "orjson",
  "pandas",
  "peewee",
  "python-dotenv",
  "psycopg2-binary",
  "scikit_learn",
  "tiktoken",
  "xgboost",
  "typing-inspect==0.8.0",
  "typing_extensions==4.5.0"
]
description = 'A Machine Learning configuration assistant.'
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "LeiZhang", email = "isleizhang@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]


[project.urls]
Documentation = "https://github.com/microsoft/mlcopilot#readme"
Issues = "https://github.com/microsoft/mlcopilot/issues"
Source = "https://github.com/microsoft/mlcopilot"

[project.scripts]
mlcopilot = "mlcopilot.cli:main"

[tool.hatch.build]
include = [
  "/mlcopilot"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
packages = ["autogpt"]
extend-exclude = '.+/(dist|.venv|venv|build)/.+'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*

'''
[project.optional-dependencies]
dev = [
  "pytest==7.4.0",
  "flake8",
  "pre-commit",
  "black",
  "isort",
]