[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "mlcopilot"
version = "0.0.2"
dependencies = [
  "click",
  "colorama",
  "langchain",
  "numpy",
  "orjson",
  "pandas",
  "peewee",
  "python-dotenv",
  "psycopg2-binary",
  "scikit_learn",
  "tiktoken",
  "xgboost",
  "typing-inspect",
  "typing_extensions",
  "ipython",
  "ipywidgets",
  "ipylab",
  "pylint",
  "markdown",
]
description = 'Assistant for data scientists and machine learning developers.'
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
authors = [
  { name = "CoML team", email = "coml@microsoft.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Documentation = "https://github.com/microsoft/coml#readme"
Issues = "https://github.com/microsoft/coml/issues"
Source = "https://github.com/microsoft/coml"

[project.scripts]
coml-configagent = "coml.configagent.cli:main"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build]
include = [
  "/coml"
]

[tool.hatch.metadata.hooks.nodejs]
fields = ["description"]

[tool.hatch.build.targets.sdist]
artifacts = ["coml/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"coml/labextension" = "share/jupyter/labextensions/coml"
"install.json" = "share/jupyter/labextensions/coml/install.json"

[tool.hatch.build.hooks.version]
path = "coml/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "coml/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "coml/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
packages = ["coml"]
extend-exclude = '.+/(dist|.venv|venv|build)/.+'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
skip = '''
  .tox
  __pycache__
  *.pyc
  .env
  venv*/*
  .venv/*
  reports/*
  dist/*
  node_modules
'''

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
  "pre-commit",
  "black",
  "isort",
]
